--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,23 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Python virtual environment
+venv/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Byte-compiled / cached files
+__pycache__/
+*.py[cod]
 
-# testing
-/coverage
+# Logs and databases
+*.log
+*.sqlite3
 
-# production
-/build
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints/
 
-# misc
+# VSCode settings
+.vscode/
+
+# Environment variables
+.env
+
+# MacOS and Linux system files
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     
-yarn-error.log*         
-
-venv
+*.swp
